# itmo-chemcrow2

./: .dockerignore  .env.example  .env.template.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GUARDRAILS_VERIFICATION.md  LICENSE  README.md  SETUP.md  claude-md-writing.md  compose.lite.yml  compose.production-ip.yml  compose.production.https.yml  compose.production.lite.yml  compose.production.yml  compose.yml  copier.yml  nginx-dns-fix.md  package-lock.json  package.json  pyproject.toml  setup_dotenv_example.sh
notebooks/ushenin_admet/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tool_definition.json
notebooks/ushenin_admet/app/: admet.py  main.py  prot_review.py  schemas.py  smirks_to_protocol.py
notebooks/ushenin_admet/demo/: agent_demo.py  prot_review_agent_demo.py
services/ai-agent/: CLAUDE.md  Dockerfile  pyproject.toml
services/ai-agent/app/: agent.py  config.py  guard.py  hazard_checker.py  main.py  schemas.py  tracing.py
services/ai-agent/app/data/: build_hazardous_db.py  hazardous_chemicals.json  smiles_cache.json
services/ai-agent/app/data-rag/: README.md
services/ai-agent/app/data-rag/benchmarks/: chapter_eval_queries.json  latest_eval_results.json  ragas_eval_set.example.json  ragas_hard_eval.json
services/ai-agent/app/data-rag/corpus_processed/: chapter_02_zashitnye_gruppy.md  chunk_001.md  chunk_009.md
services/ai-agent/app/data-rag/corpus_raw/: chapter_03_vybor_rastvoritelya.md  chapter_08_ochistka_i_analiz.md  chapter_10_strategii_optimizacii.md  chunk_013.md
services/ai-agent/app/data-rag/indexes/: bm25_index.json
services/ai-agent/app/data-rag/indexes/nomic_dense/: nomic_dense_meta.json  nomic_dense_vectors.npz
services/ai-agent/app/data-rag/sources/default/corpus_processed/: chapter_01_osnovy_reakcionnoy_sposobnosti.md  chapter_04_kataliz_perehodnymi_metallami.md  chapter_07_stereohimiya.md  chunk_000.md  chunk_003.md  chunk_007.md  chunk_010.md
services/ai-agent/app/data-rag/sources/default/corpus_processed/1-s2.0-S2667109322005450-main_bm25_chunks/: chunk_000.txt  chunk_001.txt  chunk_002.txt  chunk_003.txt  chunk_004.txt  chunk_005.txt  chunk_006.txt  chunk_007.txt  chunk_008.txt  chunk_009.txt  chunk_010.txt
services/ai-agent/app/data-rag/sources/default/corpus_processed/1-s2.0-S2667109322005450-main_chunks/: chunk_000.md  chunk_001.md  chunk_002.md  chunk_003.md  chunk_004.md  chunk_005.md  chunk_006.md  chunk_007.md  chunk_008.md  chunk_009.md  chunk_010.md
services/ai-agent/app/data-rag/sources/default/corpus_processed/1860-5397-20-87_bm25_chunks/: chunk_000.txt  chunk_001.txt  chunk_002.txt  chunk_003.txt  chunk_004.txt  chunk_005.txt  chunk_006.txt  chunk_007.txt  chunk_008.txt  chunk_009.txt  chunk_010.txt  chunk_011.txt
services/ai-agent/app/data-rag/sources/default/corpus_processed/1860-5397-20-87_chunks/: chunk_000.md  chunk_001.md  chunk_002.md  chunk_003.md  chunk_004.md  chunk_005.md  chunk_006.md  chunk_007.md  chunk_008.md  chunk_009.md  chunk_010.md  chunk_011.md
services/ai-agent/app/data-rag/sources/default/corpus_processed/Indole+Synthesis+A+Review+and+Medicinal+Uses+of+Their+Derivatives_bm25_chunks/: chunk_000.txt  chunk_001.txt  chunk_002.txt  chunk_003.txt  chunk_004.txt
services/ai-agent/app/data-rag/sources/default/corpus_processed/Indole+Synthesis+A+Review+and+Medicinal+Uses+of+Their+Derivatives_chunks/: chunk_000.md  chunk_001.md  chunk_002.md  chunk_003.md  chunk_004.md
services/ai-agent/app/data-rag/sources/default/corpus_processed/f2be0840a441e9a0786f4cf9c4a7431fd56e_bm25_chunks/: chunk_000.txt  chunk_001.txt  chunk_002.txt  chunk_003.txt  chunk_004.txt  chunk_005.txt  chunk_006.txt  chunk_007.txt  chunk_008.txt
services/ai-agent/app/data-rag/sources/default/corpus_processed/f2be0840a441e9a0786f4cf9c4a7431fd56e_chunks/: chunk_000.md  chunk_001.md  chunk_002.md  chunk_003.md  chunk_004.md  chunk_005.md  chunk_006.md  chunk_007.md  chunk_008.md
services/ai-agent/app/data-rag/sources/default/corpus_processed/inman2013_bm25_chunks/: chunk_000.txt  chunk_001.txt  chunk_002.txt  chunk_003.txt  chunk_004.txt  chunk_005.txt  chunk_006.txt  chunk_007.txt  chunk_008.txt
services/ai-agent/app/data-rag/sources/default/corpus_raw/: chapter_05_oksidaciya_i_vosstanovlenie.md  chapter_06_retrosintez.md  chunk_008.md  chunk_011.md
services/ai-agent/app/data-rag/sources/default/indexes/: bm25_index.json
services/ai-agent/app/llm_providers/: __init__.py  anthropic.py  openai.py
services/ai-agent/app/tools/: __init__.py  admet.py  chemspace.py  converters.py  literature_search.py  molecule_draw_rdkit.py  nmr.py  property_prediction.py  protocol_review.py  rag.py  rag_pdf_ingestion.py  rdkit_tools.py  reactions.py  retrosynthesis.py  safety.py  search.py  utils.py
services/ai-agent/scripts/: README-query-mas.md  README-ragas-eval.md  evaluate_pipeline_ragas.py  evaluate_rag.py  preflight_rag_corpus.py  query_fused_rag.py  query_mas.py
services/ai-agent/tests/: conftest.py  test_admet.py  test_agent.py  test_agent_routing.py  test_converters.py  test_guard.py  test_hazard_checker.py  test_molecule_draw.py  test_nmr.py  test_openalex_agent_integration.py  test_openalex_search.py  test_rag.py  test_rdkit_tools.py  test_reactions.py  test_s2_search_endpoint.py  test_safety.py  test_search.py  test_tracing.py  test_utils.py
services/article-fetcher/: CLAUDE.md  Dockerfile  pyproject.toml
services/article-fetcher/app/: config.py  fetcher.py  main.py  storage.py
services/article-fetcher/tests/: test_config.py  test_main.py  test_storage.py
services/pdf-parser/: CLAUDE.md  Dockerfile  pyproject.toml
services/pdf-parser/app/: config.py  main.py  minio_store.py  parser.py  redis_store.py  schemas.py
services/pdf-parser/tests/: test_api.py  test_config.py  test_minio_store.py  test_parser.py  test_redis_store.py  test_schemas.py
services/retrosynthesis/: CLAUDE.md  Dockerfile  aizynthfinder_wrapper.py  pyproject.toml
services/retrosynthesis/app/: config.py  main.py  schemas.py
services/retrosynthesis/app/engines/: aizynthfinder_engine.py  base.py
(+249 files in other folders)
