[project]
name = "itmo-fatsapi"
version = "0.1.0"
description = "Monorepo dependency manifest for backend and AI agent services"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "httpx>=0.25.1,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "sse-starlette>=2.0.0,<3.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "email-validator>=2.1.0.post1,<3.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "emails>=0.6,<1.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "alembic>=1.12.1,<2.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "celery[redis]>=5.3.0,<6.0.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.2.20",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "coverage>=7.4.3,<8.0.0",
    "prek>=0.2.24,<1.0.0",
]

[tool.uv.workspace]
members = [
    "backend",
    "services/ai-agent",
]
