[project]
name = "ai-agent"
version = "0.1.0"
description = "ChemCrow2 AI Agent Service — LLM orchestration with LangGraph"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "httpx>=0.25.0,<1.0.0",
    "sse-starlette>=2.0.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]
