[project]
name = "ai-agent"
version = "0.1.0"
description = "ChemCrow2 AI Agent Service — LLM orchestration with LangGraph"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "httpx>=0.25.0,<1.0.0",
    "sse-starlette>=2.0.0,<3.0.0",
    "rdkit>=2024.3.1",
    "molbloom>=2.1.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "google-search-results>=2.4.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "einops>=0.8.0",
    "langfuse>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]
