[project]
name = "article-fetcher"
version = "0.1.0"
description = "Async sci-hub article fetcher microservice"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "scidownl>=1.0.2",
    "boto3>=1.28.0",
    "pydantic-settings>=2.2.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
