[project]
name = "pdf-parser"
version = "0.1.0"
description = "PDF parsing microservice — Docling + LLM cleaning + MinIO storage"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "minio>=7.2.0,<8.0.0",
    "httpx>=0.25.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langdetect>=1.0.9",
    "docling>=2.0.0",
    "spacy>=3.7.0",
    "python-dotenv>=1.0.0",
    "langfuse>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "fakeredis>=2.20.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "ru-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
