[project]
name = "retrosynthesis"
version = "0.1.0"
description = "Retrosynthesis microservice (AiZynthFinder + extensible)"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "aizynthfinder>=4.3.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
